# Plazza

./: .gitignore  CMakeLists.txt  README.md
include/: Cook.hpp  IMutex.hpp  IPC.hpp  Kitchen.hpp  LoopClass.hpp  LoopParser.hpp  Parser.hpp  Process.hpp  PthreadThread.hpp  Pthreadmutex.hpp  Reception.hpp  plazza.hpp
src/: main.cpp
src/parsing/: IPC.cpp  LoopParser.cpp  Parser.cpp  programLoop.cpp
src/plazza/: Cook.cpp  Kitchen.cpp  Reception.cpp
src/threading_utils/: IPC.cpp  Process.cpp  PthreadThread.cpp  Pthreadmutex.cpp
